--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -66,6 +66,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Install poetry
         uses: abatilo/actions-poetry@v3
+      - name: "Install pandoc 📝"
+        uses: r-lib/actions/setup-pandoc@v2
+        with:
+          pandoc-version: "latest"
       - name: Setup poetry
         run: |
           poetry config virtualenvs.create true --local
