--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -24,7 +24,7 @@ jobs:
   # Run our test suite on various combinations of OS & Python versions
   run-pytest:
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12"]
         os: [ubuntu-22.04, ubuntu-latest, macos-latest, windows-latest]
