--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -41,14 +41,16 @@ jobs:
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
       - uses: actions/cache@v3
-        name: Define a cache for the virtual environment based on the dependencies lock file
+        name: Define a cache for the virtual environment based on the dependencies file
         with:
-          path: ./.venv
-          key: venv-${{ hashFiles('pyproject.toml') }}
+          path: |
+            ./.venv
+            poetry.lock
+          key: venv-${{ hashFiles('pyproject.toml') }}-${{ matrix.python-version }}-${{ matrix.os }}
       - name: Install the project dependencies
         run: poetry install --with test
       - name: Run the test
-        run: COLUMNS=80 poetry run coverage run -m pytest
+        run: poetry run coverage run -m pytest
       - name: "Upload coverage data to GH artifacts 📤"
         if: matrix.python-version == '3.11' && matrix.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v4
@@ -77,7 +79,9 @@ jobs:
       - uses: actions/cache@v3
         name: Define a cache for the virtual environment based on the dependencies lock file
         with:
-          path: ./.venv
+          path: |
+            ./.venv
+            poetry.lock
           key: venv-${{ hashFiles('pyproject.toml') }}
       - name: Install the project dependencies
         run: poetry install --with test
@@ -141,3 +145,29 @@ jobs:
           # leave default names
           name: python-coverage-comment-action
           path: python-coverage-comment-action.txt
+
+  run-pyright:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+      - name: Install poetry
+        uses: abatilo/actions-poetry@v3
+      - name: Setup poetry
+        run: |
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+      - uses: actions/cache@v3
+        name: Define a cache for the virtual environment based on the dependencies file
+        with:
+          path: |
+            ./.venv
+            poetry.lock
+          key: venv-${{ hashFiles('pyproject.toml') }}
+      - name: Install the project dependencies
+        run: poetry install --with test
+      - run: echo "$PWD/.venv/bin" >> $GITHUB_PATH
+      - uses: jakebailey/pyright-action@v2
+        name: Run pyright
