--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -16,6 +16,8 @@ permissions: {}
 
 on:
   push:
+    branches:
+      - main
   pull_request:
 
 jobs:
@@ -75,7 +77,7 @@ jobs:
         run: |
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         name: Define a cache for the virtual environment based on the dependencies lock file
         with:
           path: |
