--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,6 +33,7 @@ jobs:
   release-pypi:
     runs-on: ubuntu-latest
     needs: [build-package]
+    environment: release
     permissions:
       id-token: write # needed for PyPI upload
     steps:
