--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -19,6 +19,7 @@ on:
     branches:
       - main
   pull_request:
+  workflow_call:
 
 jobs:
   # Run our test suite on various combinations of OS & Python versions
