--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "lours"
-version = "1.0.0"
+version = "1.0.0.post0"
 description = ""
 authors = ["Lilian Glaudin <lilian.glaudin@xxii.fr>",
            "Clément Pinard <mail@clementpinard.fr>",
