--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ pytest-regressions = "^2.5.0"
 # See https://numpy.org/devdocs/dev/depending_on_numpy.html#numpy-2-abi-handling
 numpy = "^1"
 scipy= ">=1, <1.14"
-
+requests= "^2"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.3"
