--- a/docs/.readthedocs.yaml
+++ b/docs/.readthedocs.yaml
@@ -1,5 +1,7 @@
 version: 2
 
+# Taken from
+# https://docs.readthedocs.com/platform/stable/build-customization.html#install-dependencies-with-uv
 build:
   os: ubuntu-24.04
   tools:
@@ -12,7 +14,7 @@ build:
     create_environment:
     - uv venv "${READTHEDOCS_VIRTUALENV_PATH}"
     install:
-    - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --group docs
+    - UV_PROJECT_ENVIRONMENT="${READTHEDOCS_VIRTUALENV_PATH}" uv sync --frozen --group docs --all-extras
 
 sphinx:
   configuration: docs/conf.py
